foi adicionado as rotas nos respctivos links

--- a/views/carrinho.ejs
+++ b/views/carrinho.ejs
@@ -82,7 +82,7 @@
 
                     <div class="div_Caixa_Esquerda">
 
-                        <button class="continuar_comprando_carrinho" >CONTINUAR COMPRANDO</button>
+                        <a href="/" class="continuar_comprando_carrinho" >CONTINUAR COMPRANDO</a>
 
                         <div class="subtotal_carrinho">
 
@@ -104,7 +104,7 @@
                             </div>
 
                             <div class="caixa_finalizar_pedido_carrinho" >
-                                <button class="botao_finalizar_pedido_carrinho">finalizar  pedido</button>
+                                <a href="/checkout" class="botao_finalizar_pedido_carrinho">finalizar  pedido</a>
                             </div>
 
                             
