--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -31,13 +31,13 @@
                     <nav class="menu-lateral-area-restrita">                       
                         <ul class="ul-menu-lateral">
                             <li>
-                                <a href="./perfil-usuario.html">
+                                <a href="/perfil">
                                     <span class="material-icons">person</span>
                                     Minha Conta
                                 </a>
                             </li>
                             <li>
-                                <a href="./meus-dados.html">
+                                <a href="/meus-dados">
                                     <span class="material-icons">article</span>
                                     Meus Dados
                                 </a>
