--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,18 +6,18 @@
                     <button class="btn-hamburger-mobile">                            
                         <span class="material-icons-outlined">menu</span>
                     </button>
-                    <a href="./index.html" class="link-logo-empresa"><img src="/images/logo.svg" alt="Imagem Logo TopSales6"></a>
-                    <a href="./index.html" class="link-logo-empresa-mobile"><img src="/images/logo2.svg" alt="Imagem Logo TopSales6"></a>
+                    <a href="/" class="link-logo-empresa"><img src="/images/logo.svg" alt="Imagem Logo TopSales6"></a>
+                    <a href="/" class="link-logo-empresa-mobile"><img src="/images/logo2.svg" alt="Imagem Logo TopSales6"></a>
                     <ul class="lista-menu">
                         <li>
-                            <a href="./login.html"><span class="material-icons">account_circle</span>Minha Conta</a>
+                            <a href="/login"><span class="material-icons">account_circle</span>Minha Conta</a>
                         </li>
                         <li>
                             <a href="#"><span class="material-icons-outlined">headset_mic</span>Central de Atendimento</a>
                         </li>                            
                     </ul>
                 </div>                    
-                <a href="./carrinho.html" class="link-carrinho">
+                <a href="/carrinho" class="link-carrinho">
                     <span class="material-icons-outlined img-carrinho">shopping_cart</span>
                     <span class="qt-item-carrinho">0</span>
                 </a>                                        
