--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
     <main class="main-login">
         <div class="container">
             <div class="div-main-config-padrao">
-                <form action="./perfil-usuario.html" motod="POST">
+                <form action="/perfil" motod="POST">
                     <label for="email"> 
                         <span class="material-icons-outlined">email</span>
                          E-mail
@@ -37,7 +37,7 @@
                         Senha
                     </label>
                     <input type="password" name="password" class="password" placeholder="Digite sua senha" required>
-                    <button class="botao-login-entrar" type="submit">Entrar</button>
+                    <button class="botao-login-entrar"  type="submit">Entrar</button>
                     <a class="botao-login-criar_conta" href="/cadastro">CRIAR CONTA</a>
                 </form> 
             </div>
