--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,33 +53,19 @@
                 </h2>  
                 <div class="div-cards-principal">      
                     <div class="div-cards">
+                        
+                        <% for (let i=0; i<8; i++) { %> 
+
                         <article class="card">
                             <div class="div-card-img-infos">
                                 <figure>
-                                    <img src="/images/pc-gamer.jpg" alt="Imagem PC Gamer">
+                                    <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
                                 </figure>
                                 <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>
-            
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/processador-amd-ryzen.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
+                                    <p class="card-nome-produto"><%= produtos[i].nome %></p>
+                                    <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
+                                    <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
+                                    <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
                                 </div>                                
                             </div>
                             <button>
@@ -87,39 +73,9 @@
                             </button>
                         </article>
 
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/pc-gamer-mais-peças.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>
+                        <% } %> 
             
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/pl-video.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>                        
+                      
                     </div>
                 </div>                                  
             </section>
@@ -130,73 +86,31 @@
                 </h2>
                 <div class="div-cards-principal">      
                     <div class="div-cards">
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/pc-gamer.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>
-                        
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/processador-amd-ryzen.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>
 
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/pc-gamer-mais-peças.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>
+                        <% for (let i=8; i<=15; i++) { %> 
+
+                            <article class="card">
+                                <div class="div-card-img-infos">
+                                    <figure>
+                                        <img src="/images/produtos/<%= produtos[i].img %> " alt="Imagem PC Gamer">
+                                    </figure>
+                                    <div class="card-infos">
+                                        <p class="card-nome-produto"><%= produtos[i].nome %></p>
+                                        <p class="card-preco-anterior">De: R$<%= produtos[i].preco %> por:</p>
+                                        <p class="card-preco-atual"><strong>R$<%= ((produtos[i].preco / 10 ) * 9).toFixed(2) %> à vista</strong></p>
+                                        <p class="card-preco-parcelado">12x de R$<%= (produtos[i].preco / 12).toFixed(2) %></p>
+                                    </div>                                
+                                </div>
+                                <button>
+                                    <span class="material-icons-outlined">shopping_cart</span> Comprar
+                                </button>
+                            </article>
+    
+                            <% } %> 
+
+
             
-                        <article class="card">
-                            <div class="div-card-img-infos">
-                                <figure>
-                                    <img src="/images/pl-video.jpg" alt="Imagem PC Gamer">
-                                </figure>
-                                <div class="card-infos">
-                                    <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
-                                    <p class="card-preco-anterior">De: R$2.500,00 por:</p>
-                                    <p class="card-preco-atual"><strong>R$2.299,00 à vista</strong></p>
-                                    <p class="card-preco-parcelado">12x de R$191,58</p>
-                                </div>                                
-                            </div>
-                            <button>
-                                <span class="material-icons-outlined">shopping_cart</span> Comprar
-                            </button>
-                        </article>                        
+                      
                     </div>
                 </div>
             </section>       
