Correção do botão FinalizarPedido, do  botão continuarComprando e correção do caminho da foto na pagina de carrinho

--- a/views/carrinho.ejs
+++ b/views/carrinho.ejs
@@ -45,7 +45,7 @@
                                     <div class="sessão_de_produtos">
 
                                         <div class="primeira_sessão_de_produtos" >
-                                            <img src="/images/pl-video.jpg" alt="">
+                                            <img src="/images/produtos/computador-lenovo.jpg" alt="">
                                             <a href="">Processador Intel Core i3 12100F 3.3GHz (4.3GHz Turbo), 12ª Geração, 4-Cores 8-Threads, LGA 1700, BX8071512100F </a>
                                         </div>
 
@@ -82,7 +82,13 @@
 
                     <div class="div_Caixa_Esquerda">
 
-                        <a href="/" class="continuar_comprando_carrinho" >CONTINUAR COMPRANDO</a>
+                        <div class="caixa_continuar_comprando">
+
+                            <a href="/" class="continuar_comprando_carrinho" >CONTINUAR COMPRANDO</a>
+
+                        </div>
+
+                        
 
                         <div class="subtotal_carrinho">
 
