--- a/public/stylesheets/carrinho.css
+++ b/public/stylesheets/carrinho.css
@@ -71,6 +71,7 @@ color: #ff3838;
 {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 5%;
 }
 
 .primeira_sessão_de_produtos
@@ -156,12 +157,24 @@ color: #ff3838;
 }
 
 
+.caixa_continuar_comprando
+{
+    display: flex;
+    
+   
+}
+
 .continuar_comprando_carrinho
 {
+    display: flex;
+    align-items: center;
     margin-top: 3%;
     width: 100%;
-    padding: 3%;
+    padding: 10%;
     box-shadow: 3px 2px 10px 4px #888;
+    text-decoration: none;
+    color: #444;
+   
 }
 
 .subtotal_carrinho
@@ -203,12 +216,18 @@ color: #ff3838;
 {
     display: flex;
     justify-content: center;
+    box-shadow: 3px 2px 10px 4px #888;
+    text-decoration: none;
+    background-color: #00A000;
 }
 
 .botao_finalizar_pedido_carrinho
 {
     padding: 5%;
     text-transform: uppercase;
+    text-decoration: none;
+    color: rgb(247, 244, 244);
+    
 }
 
 .quantidade_de_itens_do_carrinho{
