Foi adicionado um banner para mobile na page (not-found).

--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" rel="stylesheet">    
     <!--CSS-->
     <link rel="stylesheet" href="/stylesheets/base.css">       
+    <link rel="stylesheet" href="/stylesheets/not-found.css">       
 </head>
 <body>
     <%- include("./partials/header")%>
@@ -23,7 +24,8 @@
     <main class="main-not-found">
         <div class="container">
             <div class="div-main-config-padrao">
-                <img src="/images/page-not-found.png" alt="Imagem informando o erro de página não encontrada.">
+                <img class="banner-not-found" src="/images/banner-not-found.png" alt="Imagem informando o erro de página não encontrada.">
+                <img class="banner-not-found-mobile" src="/images/banner-not-found-mobile.png" alt="Imagem informando o erro de página não encontrada.">
             </div>
         </div>
     </main> 
