--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -26,21 +26,41 @@
     <main class="main-cadastro">
         <div class="container">
             <div class="div-main-config-padrao">
-                <form>
+                <form action="/usuarios/cadastro" method="POST" enctype="multipart/form-data">  
                     <h2>
                     <span class="material-icons-outlined">content_paste</span>    
                     CADASTRO
-                    </h2>
-                    <label for="nome">Nome Completo</label>
-                    <input type="nome" id="nome" name="nome" placeholder="Informe seu nome completo">
+                    </h2>                
+
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" name="nome" placeholder="Informe seu nome "  >
+
+                    <% if(locals.errorsFormCadastro && errorsFormCadastro.nome) { %>
+                       
+                            <p style="color: red;"> 
+                                <b style="text-transform: capitalize;"><%= errorsFormCadastro.nome.param + ":  " %></b>  <%= errorsFormCadastro.nome.msg %>
+                            </p> 
+                            
+                        <% } %>     
+
+                    <label for="sobrenome">Sobrenome</label>
+                    <input type="text" id="sobrenome" name="sobrenome" placeholder="Informe seu sobrenome "  >
+                    
                     <label for="cpf">CPF</label>
-                    <input type="cpf" id="cpf" name="cpf" placeholder="Informe seu CPF">
-                    <label for="endereço">ENDEREÇO</label>
-                    <input type="endereço" id="endereço" name="endereço" placeholder="Informe seu endereço">
+                    <input type="text" id="cpf" name="cpf" placeholder="Informe seu CPF"  >
+                    
+                    <label for="endereco">ENDEREÇO</label>
+                    <input type="text" id="endereco" name="endereco" placeholder="Informe seu endereço" >
+                    
                     <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email" placeholder="email@topsale6.com">
+                    <input type="email" id="email" name="email" placeholder="email@topsale6.com" >
+                    
                     <label for="senha">Senha</label>
-                    <input type="password" name="password" id="password" placeholder="Digite sua senha">
+                    <input type="password" name="senha" id="senha" placeholder="Digite sua senha" >
+                    
+                    <label for="foto_de_perfil">Escolha uma foto de perfil</label>
+                    <input id="foto_de_perfil" type="file" name="foto_de_perfil"> 
+
                     <button id="botao-cadastro" type="submit">CRIAR CONTA</button>
                 </form>    
             </div>
