Continuação das melhorias da tela de cadastro(css, express-validator).

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
                     <span class="material-icons-outlined">email</span>
                     E-mail
                 </label>
-                <input type="email" class="email" name="email" placeholder="email@topsale6.com" required>
+                <input type="email" class="email" name="email" placeholder="Exp: email@topsale6.com" required>
                 <label for="senha">
                     <span class="material-icons-outlined">lock</span>
                     Senha
