--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -72,7 +72,7 @@
                                     <article class="card">
                                         <div class="div-card-img-infos">                                            
                                             <figure>
-                                                <img src="./img/pc-gamer.jpg" alt="Imagem PC Gamer">
+                                                <img src="/images/produtos/computador-lenovo.jpg" alt="Imagem PC Gamer">
                                             </figure>
                                             <div class="card-infos">
                                                 <p class="card-nome-produto">PC Gamer Fast White + HeadSet</p>
