--- a/public/stylesheets/cadastro.css
+++ b/public/stylesheets/cadastro.css
@@ -5,44 +5,88 @@
 .main-cadastro form{
     display: flex;
     flex-direction: column;
-    width: 500px;
-    margin: auto;
-    margin-bottom: 30px;
-    box-shadow: 3px 2px 10px 4px #888;
-    padding: 40px;
+    width: 100%;
+    margin-top: -30px;
+    margin-bottom: 100px;
+    box-shadow: 3px 2px 10px 4px #888;    
+    padding: 30px 20px 50px 20px;
     border-radius: 7px;
-
 }
 
 .main-cadastro form h2{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    margin-bottom: 10px;
-    font-size:1.25rem;
-    text-align: center;
-    
+    margin-top: 10px;
+    margin-bottom: 30px;
+    font-size: 1.875rem;
+    color: #333;   
 }
 
 .main-cadastro form h2 span{
+    font-size: 1.975rem;
+    color: #333;
     margin-right: 5px;
 }
 
 .main-cadastro form label{
-    margin-bottom: 5px;
-
-    
+    display: block;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 12px;    
 }
 
 .main-cadastro form input{
     border-radius: 10px;
     border: 1px solid #999;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    width: 100%;    
 }
 
-#botao-cadastro{
+.main-cadastro form .msg-erro-form-cadastro {
+    margin-top: -10px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    font-size: 0.875rem;
+    color: #c0392b; 
+}
+
+.main-cadastro form .msg-erro-form-cadastro b {
+    font-size: 0.875rem;
+    text-transform: capitalize;
+}
+
+.main-cadastro form .div-senha-confirmar-senha {
+    margin-bottom: 20px;
+}
+
+.main-cadastro form .input-upload-file {
+    border: none;
+    padding: 2px 0px 1px 3px;
+    margin-bottom: 25px;
+}
+
+.main-cadastro form .input-upload-file::file-selector-button {
+    font-weight: bold;
+    font-size: 0.875rem;
+    color: #000;
+    padding: 8px 25px 8px 25px;
+    border: thin solid #999;    
+    border-radius: 7px;
+    background-color: #eee;
+    margin-right: 15px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.main-cadastro form .input-upload-file::file-selector-button:hover {    
+    background-color: #ddd;
+}
+
+.main-cadastro form .div-form-botoes .botao-cadastro{
+    width: 70%;
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
@@ -51,82 +95,83 @@
     border-radius: 20px;
     color: white;
     background-color: #00A000;
-    cursor: pointer;
-    border: 1px solid #00A000;
+    cursor: pointer;    
     transition: 0.3s;
-    margin-top: 10px;
-    }
-
-    #botao-cadastro:hover{
-     background-color: white;
-     color:#00A000;
-        
-    }
-
-    
-
-/***#login-container{
-    width: 350px;
-    border: none;
-    height: 500px;
-    padding: 0%;
-    margin: auto;
+    margin-top: 10px;   
 }
 
-.meus_dados{
-    font-size: 25px;
-    color: #F59E3B;
-
-
+.main-cadastro form .div-form-botoes .botao-cadastro:hover{        
+        background-color: #008b00;        
 }
 
-label, input{
-    display: block;
-    width: 100%;
-    height:30px;
-    text-align: left;
-    border-radius: 10px;
+.main-cadastro form .div-form-botoes .botao-cadastro-voltar {
+    width: 20%;
+    margin-left: 10px;
+    color: #1a6699;
+    transition: 0.3s;
 }  
 
-label{
-    font-weight: bold;
+.main-cadastro form .botao-cadastro-voltar:hover {
+    color: #003457;
 }
-
-
-#botao-cadastro{
-margin-left: 80px;    
-text-align: center;
-text-transform: uppercase;
-font-weight: bold;
-border: none;
-height: 50px;
-width: 150px;
-border-radius: 20px;
-color: #323232;
-background-color: #00A000;
-cursor: pointer;   
-}/***
-
-
-/************/
 
 /******************* @media ****************************/
 
 @media (min-width: 481px) {
     /*** Main ***/
-
+    .main-cadastro form .div-form-botoes .botao-cadastro{
+        width: 40%;
+    }
     /************/
 }
 
-
 @media (min-width: 769px) { 
     /*** Main ***/
+    .main-cadastro form{        
+        margin-top: 0px;        
+    }
+
+    .main-cadastro form .div-nome-sobrenome,
+    .main-cadastro form .div-cpf-email,
+    .main-cadastro form .div-senha-confirmar-senha {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .main-cadastro form .div-nome-sobrenome .div-nome {
+        width: 39%;
+    }
+
+    .main-cadastro form .div-nome-sobrenome .div-sobrenome {
+        width: 59%;
+    } 
+    
+    .main-cadastro form .div-cpf-email .div-cpf {
+        width: 29%;
+    } 
+
+    .main-cadastro form .div-cpf-email .div-email {
+        width: 69%;
+    } 
+
+    .main-cadastro form .div-senha-confirmar-senha .div-senha {
+        width: 49%;
+    }
+
+    .main-cadastro form .div-senha-confirmar-senha .div-confirmar-senha {
+        width: 49%;
+    }
+
+    .main-cadastro form .div-form-botoes .botao-cadastro{
+        width: 25%;
+    }
+
     .meus_dados{
         margin-top: 10%;
     }
     /************/
 }
-
 
 @media (min-width: 1280px) {
     /*** Main ***/
