--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -5,12 +5,12 @@
 .main-login form {
     max-width: 500px;
     height: 470px;
-    padding: 30px 20px 40px 20px;
     margin: auto;
+    margin-top: -30px;
+    padding: 30px 20px 40px 20px;    
     margin-bottom: 100px;
     box-shadow: 3px 2px 10px 4px #888;
     border-radius: 8px;
-
 }
 
 .main-login h1 {
@@ -41,6 +41,8 @@
     align-items: center;
     margin-bottom: 12px;
     text-align: left;
+    font-weight: bold;
+    color: #333;
 }
 
 .main-login form label span {
@@ -61,6 +63,10 @@
     transition: 0.3s;
 }
 
+.main-login form .botao-login-entrar:hover {    
+    background-color: #008b00;
+} 
+
 .main-login form .div-lembrar {
     display: flex;
     flex-direction: row;
@@ -79,11 +85,7 @@
 
 .main-login form .div-lembrar label {
     margin-bottom: 0;
-}
-
-.main-login form .botao-login-entrar:hover {    
-    background-color: #008b00;
-}    
+}  
     
 .main-login form .botao-login-criar_conta {    
     margin-left: 10px;
@@ -108,7 +110,9 @@
 
 @media (min-width: 769px) { 
     /*** Main ***/
-
+    .main-login form {       
+        margin-top: 0px;        
+    }
     /************/
 }
 
