--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -4,7 +4,7 @@
 
 .main-login form {
     max-width: 500px;
-    height: 470px;
+    /*height: 470px;*/
     margin: auto;
     margin-top: -30px;
     padding: 30px 20px 40px 20px;    
@@ -24,6 +24,15 @@
     margin-bottom: 30px;    
     color: #777;
 }
+
+.main-login .infoCadastroSucesso{
+    color: #0f5132;
+    background-color: #d1e7dd;
+    font-size: 1rem;
+    padding: 15px;
+    border-radius: 7px;
+}
+
 
 .main-login form input {
     border: 1px solid #999;
@@ -96,6 +105,7 @@
 .main-login form .botao-login-criar_conta:hover {    
     color: #003457;
 }
+
 
 /************/
 
